workloads/draw/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: draw
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts: [draw.patrickdwyer.com]
      secretName: draw-tls
  rules:
    - host: draw.patrickdwyer.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: draw
                port: { number: 80 }
